--- a/templates/html/pages/form_cliente.html
+++ b/templates/html/pages/form_cliente.html
@@ -1,5 +1,8 @@
-<form>
+<!-- Formulario add cliente -->
+<div c-container="{{ url_for('cliente.form_cliente') }}"></div>
 
+
+<form>
     <div class="mb-3">
       <label class="form-label">Nome</label>
       <input type="text" class="form-control">
