telas base, rotas, backend e conexão com bd criadas (tela incial, login e cadastro usuário)

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -76,7 +76,7 @@ a:hover, button:hover {
 }
 
 .login {
-  background-color: #121212;
+  background-color: #f1ffff;
 }
 .login__form {
   display: flex;
