--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,9 @@
                         <li>
                             <a class="{{is_active('home')}}" aria-current="page" href="{{url_for('home')}}">Tela inicial</a>
                         </li>
+                        <li>
+                            <a class="{{is_active('cadastrar')}}" aria-current="page" href="{{url_for('cadastrar')}}">Cadastre-se</a>
+                        </li>
                 </div>
             </div>
         </nav>
