--- a/static/style/abstract/_variables.scss
+++ b/static/style/abstract/_variables.scss
@@ -2,7 +2,7 @@
 $title-gamerank: 'Press Start 2P';
 $text-default: 'Poppins';
 
-$bg-gamerank: #121212;
+$bg-gamerank: #f1ffff;
 $cyan-gamerank: #2BF6FA;
 $purple-two-gradient: #AB61F5;
 $purple-three-gradient: #580475;
