--- a/templates/html/pages/cliente/cadastrar.html
+++ b/templates/html/pages/cliente/cadastrar.html
@@ -1,3 +1,5 @@
+{%extends 'base.html'%}
+{%block content%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +14,7 @@
 
 </head>
 <body class="register">
-    {%block content%}
+    
         {%for message in get_flashed_messages()%}
             <div class="alert alert-warning" role="alert">
                 {{ message }}
@@ -37,17 +39,27 @@
             {%endif%}
         {%endwith%} -->
         {%endfor%}
-    {%endblock content%}
+    
 
-    <form class="register__form" method="POST" action="{{ url_for('register') }}">
-
+    <form class="register__form" method="POST" action="{{ url_for('cadastrar') }}">
         <fieldset>
-
             <h1 g-id="title">Cadastro</h1>
 
             <div class="mb-3 row">
-                <label for="staticEmail" class="col-sm-2">Usuário:</label>
+                <label for="nome" class="col-sm-2">Nome:</label>
                 <input type="text" class="form-control" placeholder="Nome" name="nome">
+            </div>
+            <div class="mb-3 row">
+                <label for="cpf" class="col-sm-2">CPF:</label>
+                <input type="text" class="form-control" placeholder="cpf" name="cpf">
+            </div>
+            <div class="mb-3 row">
+                <label for="celular" class="col-sm-2">Celular:</label>
+                <input type="text" class="form-control" placeholder="celular" name="celular">
+            </div>
+            <div class="mb-3 row">
+                <label for="endereco" class="col-sm-2">Endereço:</label>
+                <input type="text" class="form-control" placeholder="endereco" name="endereco">
             </div>
             <div class="mb-3 row">
                 <label for="inputPassword" class="col-sm-2 ">Senha:</label>
@@ -59,15 +71,16 @@
             </div>
 
             <div class="d-flex align-items-end">
-                <button type="submit">Cadastrar</button>
+                <button type="submit">
+                    Cadastrar
+                </button>
                 <a g-id="redirection" href="javascript:history.back()">Voltar</a>
             </div>
-
         </fieldset>
-
     </form>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="{{ url_for('static', filename='js/index.js') }}"></script>
 </body>
 </html>
+{%endblock content%}
