--- a/templates/html/register/login.html
+++ b/templates/html/register/login.html
@@ -31,8 +31,8 @@
             <h1 g-id="title">Login</h1>
     
             <div class="mb-3 row">
-                <label for="nome" class="col-sm-2">Usuário:</label>
-                <input type="text" class="form-control" placeholder="Nome" name="nome">
+                <label for="cpf" class="col-sm-2">CPF:</label>
+                <input type="text" class="form-control" placeholder="CPF" name="cpf">
             </div>
             <div class="mb-3 row">
                 <label for="senha" class="col-sm-2 ">Senha:</label>
@@ -41,7 +41,7 @@
     
             <div class="d-flex align-items-end">
                 <button type="submit">Login</button>
-                <a g-id="redirection" href="{{ url_for('register') }}">Cadastro</a>
+                <a g-id="redirection" href="{{ url_for('cadastrar') }}">Cadastro</a>
             </div>
     
         </fieldset>
