correção barra navegação

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                             <a class="{{is_active('home')}}" aria-current="page" href="{{url_for('home')}}">Tela inicial</a>
                         </li>
                         <li>
-                            <a class="{{is_active('cadastrar')}}" aria-current="page" href="{{url_for('cadastrar')}}">Cadastre-se</a>
+                            <a class="{{is_active('login')}}" aria-current="page" href="{{url_for('login')}}">Agende uma visita</a>
                         </li>
                 </div>
             </div>
