ver perfil do usuário funcionando (erro nas rotas após logar)

--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -11,3 +11,7 @@
 @import './pages/profile';
 @import './pages/categories';
 @import './pages/adminpage';
+
+@import "bootstrap/functions";
+@import "bootstrap/variables";
+@import "bootstrap/mixins";
