--- a/templates/base.html
+++ b/templates/base.html
@@ -27,12 +27,36 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li>
-                            <a class="{{is_active('home')}}" aria-current="page" href="{{url_for('home')}}">Tela inicial</a>
-                        </li>
-                        <li>
-                            <a class="{{is_active('login')}}" aria-current="page" href="{{url_for('login')}}">Agende uma visita</a>
-                        </li>
+                        
+                </div>
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        {% if cliente_logado %}
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    {{ nome_cliente }}
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="{{ url_for('perfil') }}">Perfil</a></li>
+                                    <li><a class="dropdown-item" href="#">Agendamentos</a></li>
+                                    <li><a class="dropdown-item" href="#">Eventos</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a class="{{is_active('home')}}" aria-current="page" href="{{url_for('home')}}">Tela inicial</a>
+                            </li>
+                        {% else %}
+                            <li>
+                                <a class="{{is_active('home')}}" aria-current="page" href="{{url_for('home')}}">Tela inicial</a>
+                            </li>
+                            <li>
+                                <a class="{{is_active('login')}}" aria-current="page" href="{{url_for('login')}}">Agende uma visita</a>
+                            </li>
+                        {% endif %}
+                    </ul>
                 </div>
             </div>
         </nav>
