--- a/templates/html/pages/cliente/dashboard_cliente.html
+++ b/templates/html/pages/cliente/dashboard_cliente.html
@@ -1,5 +1,6 @@
-{% extends 'base.html' %}
-
+{% extends "base.html" %}
 {% block content %}
-
+<p>CPF: {{ session.cpf }}</p>
+<p>Nome: {{ session.nome_cliente }}</p>
+<!-- Your dashboard content here -->
 {% endblock %}
