--- a/templates/html/pages/cliente/perfil.html
+++ b/templates/html/pages/cliente/perfil.html
@@ -40,7 +40,7 @@
         {%endfor%}
     
 
-    <form class="register__form" method="GET" action="{{ url_for('cadastrar') }}">
+    <form class="register__form" method="POST" action="{{ url_for('atualizar') }}">
         <fieldset>
             <h1 g-id="title">Perfil</h1>
 
