criação e listagem de agendamentos funcionando

--- a/templates/html/pages/cliente/agendamentos-cliente.html
+++ b/templates/html/pages/cliente/agendamentos-cliente.html
@@ -6,6 +6,7 @@
       <button type="submit" class="btn btn-primary">Agendar visita</button>
     </form>
     <table class="table">
+        <thead>
           <tr>
             <th scope="col">Data</th>
             <th scope="col">Hora</th>
@@ -13,18 +14,19 @@
           </tr>
         </thead>
         <tbody>
+          {% for agendamento in agendamentos %}
           <tr>
-            {% for agendamento in agendamentos %}
-              <td>{{ agendamento.data }}</td>
-              <td>{{ agendamento.horario }}</td>
+              <td>{{ agendamento[0] }}</td>
+              <td>{{ agendamento[1] }}</td>
               <td>
-                <form action="{{ url_for('cancelar_agendamento', id=agendamento.id) }}" method="POST">
-                  <button type="submit" class="btn btn-danger">Cancelar</button>
+                <form action="{{ url_for('cancelar_agendamento') }}" method="POST">
+                  <input type="hidden" name="data" value="{{ agendamento[0] }}">
+                  <input type="hidden" name="horario" value="{{ agendamento[1] }}">
                 </form>
+              </td>
           </tr>
-            {% endfor %}
+          {% endfor %}
         </tbody>
       </table>
 </div>
-
 {% endblock %}
