--- a/templates/html/pages/cliente/formulario-agendamento.html
+++ b/templates/html/pages/cliente/formulario-agendamento.html
@@ -9,8 +9,8 @@
             <input type="date" name="data" class="form-control">
         </div>
         <div class="form-group">
-            <label for="hora">Hora</label>
-            <input type="time" name="hora" class="form-control" id="hora">
+            <label for="horario">Horário</label>
+            <input type="time" name="horario" class="form-control" id="horario">
         </div>
         <button type="submit" class="btn btn-primary">Salvar</button>
     </form>
