--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="{{ url_for('perfil') }}">Perfil</a></li>
                                     <li><a class="dropdown-item" href="{{ url_for('agendamentos_cliente') }}">Agendamentos</a></li>
-                                    <li><a class="dropdown-item" href="#">Eventos</a></li>
+                                    <li><a class="dropdown-item" href="{{ url_for('eventos_cliente') }}">Eventos</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a></li>
                                 </ul>
