--- a/templates/html/pages/homepage.html
+++ b/templates/html/pages/homepage.html
@@ -1,21 +1,29 @@
-{%extends 'base.html'%}
-{%block content%}
-<section class="main-carousel">
+{% extends 'base.html' %}
+{% block content %}
+<section>
 
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+    <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="5000">
-            <img src="static/imgs/imgs_carousel/img-1.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-item active" data-bs-interval="4000">
+            <img src="static/imgs/imgs_carousel/img-1.jpg" class="d-block w-100" style="width: 800px; height: 500px;" alt="...">
           </div>
-          <div class="carousel-item" data-bs-interval="5000">
-            <img src="static/imgs/imgs_carousel/img-2.jpeg" class="d-block w-100" alt="...">
+          <div class="carousel-item" data-bs-interval="4000">
+            <img src="static/imgs/imgs_carousel/img-2.jpeg" class="d-block w-100" style="width: 800px; height: 500px;" alt="...">
           </div>
-          <div class="carousel-item" data-bs-interval="5000">
-            <img src="static/imgs/imgs_carousel/img-3.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-item" data-bs-interval="4000">
+            <img src="static/imgs/imgs_carousel/img-3.jpg" class="d-block w-100" style="width: 800px; height: 500px;" alt="...">
           </div>
         </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
     
 </section>
 
-{%endblock content%}
+{% endblock content %}
