--- a/static/style/style.css
+++ b/static/style/style.css
@@ -1,824 +1,4 @@
-@charset "UTF-8";
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
+.navbar{
+    background-color: #f7efcd;
+    color: #fff;
 }
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-
-body {
-  line-height: 1;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-blockquote, q {
-  quotes: none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: "";
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-a {
-  text-decoration: none;
-}
-
-ul, li {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-}
-
-a:hover, button:hover {
-  cursor: pointer;
-}
-
-.login {
-  background-color: #f1ffff;
-}
-.login__form {
-  display: flex;
-  align-items: center;
-  height: 100vh; /* ocupa a página inteira*/
-}
-.login__form fieldset {
-  width: 50%;
-  margin-bottom: 4rem;
-  padding-left: 6rem;
-}
-.login__form fieldset h1 {
-  font-family: "Press Start 2P";
-  font-size: 2.8rem;
-  color: #2BF6FA;
-  margin-bottom: 0.7rem;
-}
-.login__form fieldset h1::after {
-  content: "|";
-  margin-left: 5px;
-  opacity: 1;
-  animation: pisca 0.7s infinite;
-}
-@keyframes pisca {
-  0%, 100% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0;
-  }
-}
-.login__form fieldset label {
-  width: 100%;
-  font-family: "Poppins";
-  font-size: 1.3rem;
-  color: white;
-  margin-bottom: 1.4rem;
-  margin-top: 1.5rem;
-}
-.login__form fieldset input {
-  width: 75%;
-  font-family: "Poppins";
-  padding: 0.4rem 0.4rem 0.4rem 1.4rem;
-  margin-left: 0.6rem;
-}
-.login__form fieldset input::-moz-placeholder {
-  color: gray;
-}
-.login__form fieldset input::placeholder {
-  color: gray;
-}
-.login__form fieldset button {
-  margin-top: 4rem;
-  display: block;
-  width: 35%;
-  padding: 0.6rem 0.6rem 0.6rem 0.6rem;
-  font-family: "Poppins";
-  text-align: center;
-  text-decoration: none;
-  color: white;
-  background: linear-gradient(to right, #2BF6FA, #AB61F5, #580475);
-  border: none;
-  border-radius: 3%;
-  transition: 0.5s;
-}
-.login__form fieldset a {
-  font-family: "Press Start 2P";
-  color: #2BF6FA;
-  margin-left: 1.5rem;
-}
-
-.register {
-  background-color: #121212;
-}
-.register__form {
-  display: flex;
-  align-items: center;
-  height: 100vh; /* ocupa a página inteira*/
-}
-.register__form fieldset {
-  width: 50%;
-  margin-bottom: 4rem;
-  padding-left: 6rem;
-}
-.register__form fieldset h1 {
-  font-family: "Press Start 2P";
-  font-size: 2.8rem;
-  color: #2BF6FA;
-  margin-bottom: 0.7rem;
-}
-.register__form fieldset h1::after {
-  content: "|";
-  margin-left: 5px;
-  opacity: 1;
-  animation: pisca 0.7s infinite;
-}
-@keyframes pisca {
-  0%, 100% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0;
-  }
-}
-.register__form fieldset label {
-  width: 100%;
-  font-family: "Poppins";
-  font-size: 1.3rem;
-  color: white;
-  margin-bottom: 1.4rem;
-  margin-top: 1.5rem;
-}
-.register__form fieldset input {
-  width: 75%;
-  font-family: "Poppins";
-  padding: 0.4rem 0.4rem 0.4rem 1.4rem;
-  margin-left: 0.6rem;
-}
-.register__form fieldset input::-moz-placeholder {
-  color: gray;
-}
-.register__form fieldset input::placeholder {
-  color: gray;
-}
-.register__form fieldset button {
-  margin-top: 4rem;
-  display: block;
-  width: 35%;
-  padding: 0.6rem 0.6rem 0.6rem 0.6rem;
-  font-family: "Poppins";
-  text-align: center;
-  text-decoration: none;
-  color: white;
-  background: linear-gradient(to right, #2BF6FA, #AB61F5, #580475);
-  border: none;
-  border-radius: 3%;
-  transition: 0.5s;
-}
-.register__form fieldset a {
-  font-family: "Press Start 2P";
-  color: #2BF6FA;
-  margin-left: 1.5rem;
-}
-
-.home header {
-  background-color: #121212;
-}
-.home header nav {
-  font-family: "Poppins";
-  padding: 1rem;
-}
-.home header nav a {
-  color: white;
-  margin-left: 3.3rem;
-  font-size: 0.8rem;
-  margin-top: -0.3rem;
-}
-.home header nav a.active {
-  padding-bottom: 0.5rem;
-  border-bottom: 4px solid #2BF6FA;
-}
-.home header nav a.active-profile {
-  color: #2BF6FA;
-}
-.home main {
-  background-color: #121212;
-  min-height: 94.4vh;
-}
-
-.ranking {
-  height: 100%;
-  padding: 2rem;
-}
-.ranking h1 {
-  font-family: "Poppins";
-  font-size: 1.5rem;
-  color: white;
-}
-.ranking table {
-  width: 100%;
-  margin-top: 3rem;
-  font-family: "Poppins";
-  color: white;
-}
-.ranking table thead th {
-  padding-left: 1rem;
-  padding-bottom: 1.4rem;
-}
-.ranking table tbody tr {
-  height: 5rem;
-  background-color: #1E1E1E;
-}
-.ranking table tbody tr td:nth-child(1) {
-  width: 10%;
-  padding-left: 2.5rem;
-  padding-top: -1.5rem;
-}
-.ranking table tbody tr td:nth-child(2) {
-  width: 10%;
-  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-}
-.ranking table tbody tr td:nth-child(2) img {
-  height: 55px;
-  margin-top: 0.3rem;
-  margin-bottom: -1.5rem;
-}
-.ranking table tbody tr td:nth-child(3) {
-  width: 30%;
-  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-}
-.ranking table tbody tr td:nth-child(4) {
-  width: 50%;
-  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-}
-
-.profile {
-  height: 100%;
-  padding: 1rem;
-}
-.profile .name-user {
-  padding-top: 1rem;
-  font-family: "Press Start 2P";
-  font-size: 1.5rem;
-  color: white;
-}
-.profile .name-user span{
-  color: #2BF6FA;
-}
-.profile__infos {
-  height: auto;
-  width: 100%;
-  background-color: #1E1E1E;
-}
-.profile__infos form {
-  display: flex;
-  margin-bottom: 5.5rem;
-}
-.profile__infos form img {
-  height: 10rem;
-  width: 14rem;
-  margin-left: 1rem;
-}
-.profile__infos form fieldset {
-  width: 50%;
-  margin-left: 3rem;
-  display: flex;
-  flex-direction: column;
-}
-.profile__infos form fieldset label {
-  width: 100%;
-  font-family: "Poppins";
-  font-size: 1.3rem;
-  color: white;
-  margin-bottom: 1.4rem;
-  margin-top: 1.8rem;
-  margin-left: 0.6rem;
-}
-.profile__infos form fieldset input {
-  width: 75%;
-  font-family: "Poppins";
-  padding: 0.4rem 0.4rem 0.4rem 1.4rem;
-  margin-left: 0.6rem;
-}
-.profile__infos form fieldset input::-moz-placeholder {
-  color: gray;
-}
-.profile__infos form fieldset input::placeholder {
-  color: gray;
-}
-.profile__infos button:nth-child(1) {
-  display: block;
-  width: 10%;
-  padding: 0.6rem 0.6rem 0.6rem 0.6rem;
-  margin-right: 1.5rem;
-  color: white;
-  background-color: #FF0000;
-  font-family: "Poppins";
-  font-weight: bold;
-  text-align: center;
-  text-decoration: none;
-  border: none;
-  border-radius: 0.3rem;
-  outline: none;
-}
-.profile__infos button:nth-child(2) {
-  display: block;
-  width: 10%;
-  padding: 0.6rem 0.6rem 0.6rem 0.6rem;
-  color: white;
-  background-color: #00FF19;
-  margin-right: 2.5rem;
-  font-family: "Poppins";
-  font-weight: bold;
-  text-align: center;
-  text-decoration: none;
-  border: none;
-  border-radius: 0.3rem;
-  outline: none;
-}
-.profile__wishlist {
-  margin-top: 2.3rem;
-}
-.profile__wishlist h1 {
-  font-family: "Poppins";
-  font-size: 1.5rem;
-  color: white;
-}
-.profile__wishlist table {
-  width: 100%;
-  margin-top: 2rem;
-  font-family: "Poppins";
-  font-size: 0.8rem;
-  color: white;
-}
-.profile__wishlist table thead td {
-  padding-left: 1rem;
-  padding-bottom: 1.4rem;
-}
-.profile__wishlist table tbody tr {
-  height: 5rem;
-  background-color: #1E1E1E;
-}
-.profile__wishlist table tbody tr td:nth-child(1) {
-  width: 10%;
-  padding-left: 0.5rem;
-  padding-top: -1.5rem;
-}
-.profile__wishlist table tbody tr td:nth-child(2) {
-  width: 10%;
-  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-}
-.profile__wishlist table tbody tr td:nth-child(2) img {
-  height: 55px;
-  margin-top: 0.3rem;
-  margin-bottom: -1.5rem;
-}
-.profile__wishlist table tbody tr td:nth-child(3) {
-  width: 30%;
-  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-}
-.profile__wishlist table tbody tr td:nth-child(4) {
-  width: 50%;
-  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-}
-.profile__reviews {
-  margin-top: 2.3rem;
-}
-.profile__reviews h1 {
-  font-family: "Poppins";
-  font-size: 1.5rem;
-  color: white;
-}
-.profile__reviews table {
-  margin-top: 2rem;
-}
-.profile__reviews table tbody tr {
-  height: 97px;
-  width: 100%;
-  background-color: #1E1E1E;
-  margin-top: 3rem;
-}
-.profile__reviews table tbody tr td:nth-child(1) {
-  width: 20%;
-  padding-left: 0.5rem;
-}
-.profile__reviews table tbody tr td:nth-child(1) p {
-  color: white;
-  font-family: "Poppins";
-}
-.profile__reviews table tbody tr td:nth-child(1) select {
-  height: 38px;
-  width: 200px;
-  text-align: center;
-}
-.profile__reviews table tbody tr td:nth-child(2) {
-  width: 20%;
-  padding-left: 0.5rem;
-}
-.profile__reviews table tbody tr td:nth-child(2) p {
-  color: white;
-  font-family: "Poppins";
-}
-.profile__reviews table tbody tr td:nth-child(2) img {
-  height: 56px;
-  width: 56px;
-}
-.profile__reviews table tbody tr td:nth-child(2) select {
-  height: 39px;
-  width: 200px;
-  text-align: center;
-}
-.profile__reviews table tbody tr td:nth-child(3) {
-  display: flex;
-  align-items: center;
-  width: 93%;
-}
-.profile__reviews table tbody tr td:nth-child(3) textarea {
-  min-height: 5rem;
-  width: 100%;
-  resize: none;
-  font-family: "Poppins";
-  outline: none;
-  padding-left: 0.5rem;
-  background-color: transparent;
-  color: white;
-}
-.profile__reviews table tbody tr td:nth-child(4) {
-  width: 10%;
-}
-.profile__reviews table tbody tr td:nth-child(4) button:nth-child(1) {
-  display: block;
-  width: 38%;
-  padding: 0.6rem 0.6rem 0.6rem 0.6rem;
-  margin-right: 1.5rem;
-  color: white;
-  background-color: #FF0000;
-  font-family: "Poppins";
-  font-weight: bold;
-  text-align: center;
-  text-decoration: none;
-  border: none;
-  border-radius: 0.3rem;
-  outline: none;
-}
-.profile__reviews table tbody tr td:nth-child(4) button:nth-child(2) {
-  display: block;
-  width: 35%;
-  padding: 0.6rem 0.6rem 0.6rem 0.6rem;
-  color: white;
-  background-color: #00FF19;
-  margin-right: 2.5rem;
-  font-family: "Poppins";
-  font-weight: bold;
-  text-align: center;
-  text-decoration: none;
-  border: none;
-  border-radius: 0.3rem;
-  outline: none;
-}
-
-.categories {
-  height: 100%;
-  padding: 1rem;
-}
-.categories h1 {
-  font-family: "Poppins";
-  font-size: 1.5rem;
-  color: white;
-}
-.categories h4 {
-  font-family: "Poppins";
-  color: white;
-  margin-top: 2.5rem;
-  margin-left: 2.6rem;
-  margin-bottom: 1.5rem;
-}
-.categories .game {
-  height: 180px;
-  width: 130px;
-  margin-right: 2rem;
-  margin-top: 4rem;
-  cursor: pointer;
-}
-.categories .game img {
-  height: 130px;
-  width: 130px;
-}
-.categories .game__body {
-  width: 100%;
-}
-.categories .game__body p {
-  font-size: 0.8rem;
-  font-family: "Poppins";
-  text-align: center;
-  color: white;
-  margin-top: 0.5rem;
-}
-.categories .game__body button {
-  height: 23px;
-  width: 30px;
-  font-size: 1rem;
-  padding: 0;
-}
-
-.modal__container {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  position: relative;
-  background-color: #121212;
-  background-clip: padding-box;
-  border: var(--bs-modal-border-width) solid var(--bs-modal-border-color);
-  border-radius: var(--bs-modal-border-radius);
-  color: var(--bs-modal-color);
-  outline: 0;
-  pointer-events: auto;
-}
-.modal__header {
-  display: flex;
-  flex-shrink: 0;
-  align-items: center;
-  padding-left: 1rem;
-}
-.modal__body {
-  display: flex;
-  position: relative;
-  padding: var(--bs-modal-padding);
-}
-.modal__body .functionality {
-  width: 15%;
-}
-.modal__body .functionality img {
-  height: 8rem;
-  width: 8rem;
-  margin-bottom: 1rem;
-}
-.modal__body .functionality select {
-  font-family: "Poppins";
-  color: gray;
-  width: 77% !important;
-}
-.modal__body .functionality p {
-  margin-top: 1rem;
-  font-family: "Press Start 2P";
-  color: #2BF6FA;
-  font-size: 0.47rem;
-  cursor: pointer;
-}
-.modal__body .description {
-  overflow-y: auto;
-  height: 12rem;
-  width: 80%;
-  border: 1px solid white;
-  padding: 1rem;
-}
-.modal__body .description p {
-  font-family: "Poppins";
-  font-size: 1.2rem;
-  color: white;
-}
-.modal__footer {
-  padding: 1rem;
-}
-.modal__footer .comments {
-  height: 17rem;
-  overflow-y: auto;
-  width: 100%;
-  border: 1px solid white;
-  padding: 1rem;
-}
-.modal__footer .comments .review {
-  display: flex;
-  margin-bottom: 2rem;
-}
-.modal__footer .comments .review img {
-  height: 50px;
-  width: 100px;
-  margin-bottom: 0.5rem;
-}
-.modal__footer .comments .review select {
-  height: 33px;
-}
-.modal__footer .comments .review textarea {
-  min-height: 3rem;
-  width: 100%;
-  resize: none;
-  margin-left: 0.5rem;
-  font-family: "Poppins";
-  outline: none;
-  padding-left: 0.5rem;
-}
-.modal__footer .comment .review {
-  display: flex;
-  margin-top: 2rem;
-}
-.modal__footer .comment .review img {
-  height: 50px;
-  width: 80px;
-  margin-bottom: 0.5rem;
-}
-.modal__footer .comment .review select {
-  height: 33px;
-}
-.modal__footer .comment .review textarea {
-  min-height: 3rem;
-  width: 100%;
-  resize: none;
-  margin-left: 0.5rem;
-  font-family: "Poppins";
-  outline: none;
-  padding-left: 0.5rem;
-}
-.modal__footer .btns button:nth-child(1) {
-  display: block;
-  width: 10%;
-  margin-right: 1.5rem;
-  padding: 0.2rem 0.5rem 0.2rem 0.5rem;
-  color: white;
-  background-color: #FF0000;
-  font-family: "Poppins";
-  font-weight: bold;
-  text-align: center;
-  text-decoration: none;
-  border: none;
-  border-radius: 0.3rem;
-  outline: none;
-}
-.modal__footer .btns button:nth-child(2) {
-  display: block;
-  width: 10%;
-  color: white;
-  background-color: #00FF19;
-  margin-right: 2.5rem;
-  font-family: "Poppins";
-  font-weight: bold;
-  text-align: center;
-  text-decoration: none;
-  border: none;
-  border-radius: 0.3rem;
-  outline: none;
-}
-
-.administrators {
-  height: 100vh;
-  background-color: #121212;
-}
-.administrators .forms {
-  width: 100%;
-  display: flex;
-  margin-top: 3rem;
-  justify-content: space-around;
-}
-.administrators .forms form:nth-child(1) h1 {
-  font-family: "Press Start 2P";
-  font-size: 2rem;
-  color: #2BF6FA;
-  margin-bottom: 0.7rem;
-}
-.administrators .forms form:nth-child(1) label {
-  width: 100%;
-  font-family: "Poppins";
-  font-size: 1.3rem;
-  color: white;
-  margin-bottom: 1.4rem;
-  margin-top: 1.5rem;
-}
-.administrators .forms form:nth-child(1) input {
-  width: 100%;
-  font-family: "Poppins";
-  padding: 0.4rem 0.4rem 0.4rem 1.4rem;
-  margin-left: 0.6rem;
-}
-.administrators .forms form:nth-child(1) button {
-  margin-top: 4rem;
-  display: block;
-  width: 35%;
-  padding: 0.6rem 0.6rem 0.6rem 0.6rem;
-  font-family: "Poppins";
-  text-align: center;
-  text-decoration: none;
-  color: white;
-  background: linear-gradient(to right, #2BF6FA, #AB61F5, #580475);
-  border: none;
-  border-radius: 3%;
-  transition: 0.5s;
-}
-.administrators .forms form:nth-child(2) h1 {
-  font-family: "Press Start 2P";
-  font-size: 2rem;
-  color: #2BF6FA;
-  margin-bottom: 0.7rem;
-}
-.administrators .forms form:nth-child(2) label {
-  width: 100%;
-  font-family: "Poppins";
-  font-size: 1.3rem;
-  color: white;
-  margin-bottom: 1.4rem;
-  margin-top: 1.5rem;
-}
-.administrators .forms form:nth-child(2) input {
-  width: 100%;
-  font-family: "Poppins";
-  padding: 0.4rem 0.4rem 0.4rem 1.4rem;
-  margin-left: 0.6rem;
-}
-.administrators .forms form:nth-child(2) button {
-  margin-top: 4rem;
-  display: block;
-  width: 35%;
-  padding: 0.6rem 0.6rem 0.6rem 0.6rem;
-  font-family: "Poppins";
-  text-align: center;
-  text-decoration: none;
-  color: white;
-  background: linear-gradient(to right, #2BF6FA, #AB61F5, #580475);
-  border: none;
-  border-radius: 3%;
-  transition: 0.5s;
-}
-.administrators .deletion {
-  padding-bottom: 3rem;
-}
-.administrators .deletion h1 {
-  font-family: "Poppins";
-  font-size: 1.5rem;
-  color: white;
-}
-.administrators .deletion table {
-  width: 100%;
-  margin-top: 3rem;
-  padding-bottom: 3rem;
-  font-family: "Poppins";
-  color: white;
-}
-.administrators .deletion table thead tr {
-  margin-bottom: 1rem;
-}
-.administrators .deletion table tbody tr {
-  margin-bottom: 1rem;
-  height: 5rem;
-  background-color: #1E1E1E;
-}
-.administrators .deletion table tbody tr td:nth-child(1) {
-  width: 10%;
-  padding-left: 2.5rem;
-  padding-top: -1.5rem;
-}
-.administrators .deletion table tbody tr td:nth-child(2) {
-  width: 10%;
-  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-}
-.administrators .deletion table tbody tr td:nth-child(2) img {
-  height: 55px;
-  margin-top: 0.3rem;
-  margin-bottom: -1.5rem;
-}
-.administrators .deletion table tbody tr td:nth-child(3) {
-  width: 30%;
-  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-}
-.administrators .deletion table tbody tr td:nth-child(4) {
-  width: 50%;
-  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-}/*# sourceMappingURL=style.css.map */
