--- a/templates/html/pages/cliente/agendamentos-cliente.html
+++ b/templates/html/pages/cliente/agendamentos-cliente.html
@@ -1,28 +1,30 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Agendamentos</h1>
-<div class="container">
-    <form action="{{ url_for('novo_agendamento') }}" method="GET">
-      <button type="submit" class="btn btn-primary">Agendar visita</button>
-    </form>
-    <table class="table">
+<h1 class="text-center">Meus agendamentos</h1>
+<div class="container d-flex flex-column align-items-center">
+    <div class="d-flex justify-content-end mb-3 w-100">
+        <form action="{{ url_for('novo_agendamento') }}" method="GET">
+            <button type="submit" class="btn btn-primary">Agendar visita</button>
+        </form>
+    </div>
+    <table class="table table-striped">
         <thead>
           <tr>
-            <th scope="col">Data</th>
-            <th scope="col">Hora</th>
-            <th>Ações</th>
+            <th scope="col" class="text-center">Data</th>
+            <th scope="col" class="text-center">Hora</th>
+            <th scope="col" class="text-center">Ações</th>
           </tr>
         </thead>
         <tbody>
           {% for agendamento in agendamentos %}
           <tr>
-              <td>{{ agendamento[0] }}</td>
-              <td>{{ agendamento[1] }}</td>
-              <td>
+              <td class="text-center">{{ agendamento[0] }}</td>
+              <td class="text-center">{{ agendamento[1] }}</td>
+              <td class="text-center">
                 <form action="{{ url_for('cancelar_agendamento') }}" method="POST" onsubmit="return confirmCancel()">
                   <input type="hidden" name="data" value="{{ agendamento[0] }}">
                   <input type="hidden" name="horario" value="{{ agendamento[1] }}">
-                  <button type="submit" class="btn btn-light" >Cancelar</button>
+                  <button type="submit" class="btn btn-light">Cancelar</button>
                 </form>
               </td>
           </tr>
