--- a/templates/html/pages/cliente/dashboard-cliente.html
+++ b/templates/html/pages/cliente/dashboard-cliente.html
@@ -1,6 +1,20 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
+
 {% block content %}
-<p>CPF: {{ session.cpf }}</p>
-<p>Nome: {{ session.nome_cliente }}</p>
-<!-- Your dashboard content here -->
+<div class="container">
+    <h1 class="my-4">Dashboard</h1>
+    <div id="calendar"></div>
+</div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        var calendarEl = document.getElementById('calendar');
+        var eventos = {{ eventos | tojson | safe }};
+        var calendar = new FullCalendar.Calendar(calendarEl, {
+            initialView: 'dayGridMonth',
+            events: eventos
+        });
+        calendar.render();
+    });
+</script>
 {% endblock %}
