--- a/templates/html/pages/cliente/formulario-agendamento.html
+++ b/templates/html/pages/cliente/formulario-agendamento.html
@@ -2,18 +2,23 @@
 
 {% block content %}  
 
-<div class="container mt-5">
-    <form action="{{ url_for('novo_agendamento') }}" method="POST">
-        <div class="form-group">
-            <label for="data">Data</label>
-            <input type="date" name="data" class="form-control">
-        </div>
-        <div class="form-group">
-            <label for="horario">Horário</label>
-            <input type="time" name="horario" class="form-control" id="horario">
-        </div>
-        <button type="submit" class="btn btn-primary">Salvar</button>
-    </form>
+<div class="container d-flex justify-content-center align-items-center vh-100">
+    <div class="w-50">
+        <h1 class="text-center mb-4">Novo Agendamento</h1>
+        <form action="{{ url_for('novo_agendamento') }}" method="POST">
+            <div class="form-group mb-3">
+                <label for="data">Data</label>
+                <input type="date" name="data" class="form-control">
+            </div>
+            <div class="form-group mb-3">
+                <label for="horario">Horário</label>
+                <input type="time" name="horario" class="form-control" id="horario">
+            </div>
+            <div class="d-flex justify-content-center">
+                <button type="submit" class="btn btn-primary">Salvar</button>
+            </div>
+        </form>
+    </div>
 </div>
+
 {% endblock %}
-   
